一時的にね

--- a/.gitignore
+++ b/.gitignore
@@ -104,7 +104,7 @@ venv.bak/
 .mypy_cache/
 
 config.py
-
+chromedriver
 
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
