--- a/requirements.txt
+++ b/requirements.txt
@@ -1,26 +1,100 @@
-absl-py==0.1.13
+absl-py==0.2.2
+appnope==0.1.0
 astor==0.6.2
+backcall==0.1.0
+beautifulsoup4==4.6.0
 bleach==1.5.0
+Cerberus==1.1
+certifi==2018.1.18
+chardet==3.0.4
 click==6.7
+cycler==0.10.0
+decorator==4.3.0
+dj-database-url==0.5.0
+Django==2.0.5
+django-heroku==0.3.1
+entrypoints==0.2.3
 Flask==0.12.2
 gast==0.2.0
-grpcio==1.10.0
-gunicorn==19.7.1
-h5py==2.7.1
+grpcio==1.12.1
+gunicorn==19.8.1
+h5py==2.8.0
 html5lib==0.9999999
+idna==2.6
+ipykernel==4.8.2
+ipython==6.3.1
+ipython-genutils==0.2.0
+ipywidgets==7.2.1
 itsdangerous==0.24
+jedi==0.12.0
 Jinja2==2.10
-Keras==2.1.5
+jsonschema==2.6.0
+jupyter==1.0.0
+jupyter-client==5.2.3
+jupyter-console==5.2.0
+jupyter-core==4.4.0
+kaggle==1.3.12
+Keras==2.2.0
+Keras-Applications==1.0.2
+Keras-Preprocessing==1.0.1
+kiwisolver==1.0.1
 Markdown==2.6.11
 MarkupSafe==1.0
-numpy==1.14.2
-opencv-python==3.4.0.12
-pillow==5.0.0
-protobuf==3.5.2.post1
+matplotlib==2.2.2
+mecab-python3==0.7
+mistune==0.8.3
+nbconvert==5.3.1
+nbformat==4.4.0
+notebook==5.4.1
+numpy==1.14.0
+oauthlib==2.0.7
+pandas==0.22.0
+pandocfilters==1.4.2
+parso==0.2.0
+pexpect==4.5.0
+pickleshare==0.7.4
+Pillow==5.1.0
+pipenv==2018.5.18
+prompt-toolkit==1.0.15
+protobuf==3.6.0
+psycopg2==2.7.4
+ptyprocess==0.5.2
+pybitflyer==0.1.9
+pycrypto==2.6.1
+pydot==1.2.4
+Pygments==2.2.0
+PyMySQL==0.8.1
+pyparsing==2.2.0
+python-dateutil==2.6.1
+pytz==2017.3
 PyYAML==3.12
-scipy==1.0.1
+pyzmq==17.0.0
+qrcode==6.0
+qtconsole==4.3.1
+requests==2.18.4
+requests-oauthlib==0.8.0
+scikit-learn==0.19.1
+scipy==1.1.0
+selenium==3.12.0
+Send2Trash==1.5.0
+simplegeneric==0.8.1
 six==1.11.0
-tensorboard==1.6.0
-tensorflow==1.6.0
+tensorboard==1.8.0
+tensorflow==1.8.0
 termcolor==1.1.0
+terminado==0.8.1
+testpath==0.3.1
+tinydb==3.7.0
+tornado==5.0.2
+tqdm==4.23.4
+traitlets==4.3.2
+urllib3==1.22
+virtualenv==15.1.0
+virtualenv-clone==0.3.0
+wcwidth==0.1.7
+webencodings==0.5.1
+websocket-client==0.46.0
 Werkzeug==0.14.1
+whitenoise==3.3.1
+widgetsnbextension==3.2.1
+zaifapi==1.6.2
