--- a/.gitignore
+++ b/.gitignore
@@ -103,7 +103,6 @@ venv.bak/
 # mypy
 .mypy_cache/
 
-config.py
 chromedriver
 
 # See https://help.github.com/ignore-files/ for more about ignoring files.
@@ -127,3 +126,5 @@ insta_twitter/node_modules
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.envrc
